--- a/jogo-velha/src/pages/index.css
+++ b/jogo-velha/src/pages/index.css
@@ -1,9 +1,9 @@
 :root {
-  --O-color: #2196f3;
-  --X-color: #f44336;
+  --O-color: #f44336;
+  --X-color: #0092c9;
   --E-color: #777;
 
-  --green: #4caf50;
+  --velha: #949494;
 }
 
 * {
@@ -28,8 +28,18 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 240px);
   grid-template-rows: repeat(3, 200px);
-  gap: 1rem;
-  margin-top: 20px;
+  gap: 0.3rem;
+  margin-top: 30px;
+  position: relative;
+}
+
+section {
+  position: absolute;
+  width: 99%;
+  background: var(--velha);
+  height: 99%;
+  z-index: 0;
+  margin: 4px;
 }
 
 .cell {
@@ -37,19 +47,20 @@ main {
   align-items: center;
   justify-content: center;
 
-  background-color: #fff;
+  background-color: #eee;
   border-radius: 5px;
   font-size: 3rem;
   font-weight: bold;
   color: #000066;
 
   cursor: pointer;
+  z-index: 1;
 }
 
-.cell:not(.O):not(.X):hover {
+/* .cell:not(.O):not(.X):hover {
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
-}
+} */
 
 .cell.O,
 .cell.X,
@@ -58,15 +69,15 @@ main {
 }
 
 .cell.O {
-  background-color: var(--O-color);
+  color: var(--O-color);
 }
 
 .cell.X {
-  background-color: var(--X-color);
+  color: var(--X-color);
 }
 
 .cell.E {
-  background-color: var(--E-color);
+  color: var(--E-color);
 }
 
 footer {
@@ -93,7 +104,7 @@ button {
   padding: 0.8rem 1.5rem;
   border: none;
   border-radius: 5px;
-  background-color: var(--green);
+  background-color: var(--X-color);
   color: #fff;
   font-size: 1.2rem;
 }
